PC-134: add horizontal scroll to select items and fix an issue that causes the dropdown menu to automatically open and reopen

--- a/app/assets/stylesheets/application/input.scss
+++ b/app/assets/stylesheets/application/input.scss
@@ -55,7 +55,7 @@ textarea {
   border-block: none !important;
   width: 100%!important;
   max-height: 185px !important;
-  box-sizing: border-box !important;
+  overflow: auto !important;
 }
 
 .rbt-highlight-text {
